# RT-QTinyECG-ESP32-Rust

Journal_PDFs_Embedded_Medical_ECG_TinyML/: README_MANIFEST.md
Product/: README.md  requirements.txt  run_all_plots.bat  run_uart_eval.bat
Product/data/: auto_disagreements.csv  comparison_report.csv  esp32_predictions.csv  finetune_history.csv  model.pkl  optimization_targets.json  quantized_weights.npz  scaler.pkl  simulated_realtime_log.csv
Product/data/plots/: accuracy_chart.csv  accuracy_comparison.csv  confusion_matrix_esp32.csv  confusion_matrix_pc.csv  model_weights_w1.csv  model_weights_w2.csv  quantization_error.csv  training_history.csv  weight_distribution.csv
Product/docs/: INDEX.md  algorithm.md  block_diagram.md  evaluation_metrics.md  flowchart.md  optimization_guide.md  real_time_design.md  uart_feed_evaluation.md  wiring_esp32_ad8232.md
Product/firmware/esp32-rust/: Cargo.toml  rust-toolchain.toml
Product/firmware/esp32-rust/.cargo/: config.toml
Product/firmware/esp32-rust/src/: adc_reader.rs  alert.rs  filter.rs  inference.rs  logger.rs  main.rs  model_weights.rs  uart_feed.rs
Product/gnuplot/: plot_ecg_signal.gp  plot_inference_time.gp
Product/gnuplot/evaluation/: confusion_matrix.gp  model_weights.gp  quantization_error.gp  training_history.gp
Product/gnuplot/model_esp32/: inference_time.gp
Product/gnuplot/model_pc/: alert_latency.gp  inference_time.gp
Product/python/: export_plots_data.py  export_rust_weights.py  fine_tune_model.py  generate_dummy_ecg.py  metrics.py  preprocessing.py  train_simple_model.py  uart_feed_evaluator.py
RT-QTinyECG-ESP32-Rust/: LICENSE  README.md  run_simulation.bat  run_uart_eval.bat
RT-QTinyECG-ESP32-Rust/data/: README_DATA.md  esp32_predictions.csv  model.pkl  quantized_weights.npz  sample_ecg.csv  scaler.pkl  simulated_realtime_log.csv
RT-QTinyECG-ESP32-Rust/data/plots/: accuracy_chart.csv  accuracy_comparison.csv  model_weights_w1.csv  model_weights_w2.csv  quantization_error.csv  training_history.csv  weight_distribution.csv
RT-QTinyECG-ESP32-Rust/docs/: INDEX.md  algorithm.md  evaluation_metrics.md  real_time_design.md
RT-QTinyECG-ESP32-Rust/firmware/esp32-rust/: Cargo.toml  README_FIRMWARE.md
RT-QTinyECG-ESP32-Rust/firmware/esp32-rust/.cargo/: config.toml
RT-QTinyECG-ESP32-Rust/firmware/esp32-rust/src/: adc_reader.rs  alert.rs  inference.rs  main.rs  model_weights.rs  ring_buffer.rs  uart_feed.rs
RT-QTinyECG-ESP32-Rust/gnuplot/: plot_alert_latency.gp
RT-QTinyECG-ESP32-Rust/gnuplot/evaluation/: accuracy_comparison.gp
RT-QTinyECG-ESP32-Rust/gnuplot/model_esp32/: alert_latency.gp  ecg_signal.gp
RT-QTinyECG-ESP32-Rust/gnuplot/model_pc/: ecg_signal.gp
RT-QTinyECG-ESP32-Rust/images/: placeholder.txt
RT-QTinyECG-ESP32-Rust/python/: compare_models.py  export_rust_weights.py  fine_tune_model.py  optimization_report.py  preprocessing.py  quantize_weights.py  realtime_ecg_simulator.py  uart_feed_evaluator.py
