[package]
name    = "ecg-esp32"
version = "0.1.0"
edition = "2021"
authors = ["RT-QTinyECG-ESP32-Rust Project"]
description = "Real-Time Quantized ECG Detection on ESP32 - Educational Prototype"
license = "MIT"

# ── Dependencies: updated for Xtensa Rust 1.95.0.0 ────────────────────────────
# esp-hal 1.x is required for Xtensa Rust >=1.87 (naked_asm! API change).
# esp-hal 0.18 is incompatible because xtensa-lx-rt 0.16 uses the old asm!
# in naked functions (E0787 error).

[dependencies]
# ESP32 Hardware Abstraction Layer (no_std, no_main)
# 'unstable' feature is required in esp-hal 1.1 to access:
#   - analog::adc (Adc, AdcConfig, Attenuation)
#   - delay::Delay
#   - #[esp_hal::entry] macro
esp-hal = { version = "1.1", features = ["esp32", "unstable"] }

# ESP32 panic + exception handler
# Note: 'exception-handler' was removed in 0.19 — it's now always included.
esp-backtrace = { version = "0.19", features = [
    "esp32",
    "panic-handler",
    "println",
] }

# UART print macros (no_std)
# IMPORTANT: default-features = false is required!
# esp-println's default feature "auto" conflicts with "uart" — they are
# mutually exclusive output-mode features. Disabling defaults fixes this.
esp-println = { version = "0.17", default-features = false, features = [
    "esp32",
    "uart",
] }

# Non-blocking I/O traits (used for ADC nb::block! reads)
nb = "1.1"

# Xtensa Rust runtime (provides #[entry] proc-macro for ESP32 bare-metal)
# This is a transitive dep of esp-hal, listed explicitly so we can import
# xtensa_lx_rt::entry directly in main.rs.
xtensa-lx-rt = "0.22"

# ── Build profiles ─────────────────────────────────────────────────────────────
[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level  = "s"
debug      = false
lto        = true
codegen-units = 1

[[bin]]
name  = "ecg-esp32"
path  = "src/main.rs"
test  = false
bench = false

# ── Feature flags ──────────────────────────────────────────────────────────────
[features]
default = []

# Enable UART Feed Mode: ESP32 reads ADC values from UART RX (GPIO3)
# instead of the real ADC (GPIO34). Used for PC→ESP32 simulation evaluation.
#
# Build with:
#   cargo build --release --features uart-feed
#
# Flash with:
#   espflash flash target\xtensa-esp32-none-elf\release\ecg-esp32
#
# Then run on PC:
#   py python/uart_feed_evaluator.py --port COM3
uart-feed = []
